<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_levels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inf8405.match3app.match3app.LevelsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:text="@string/level_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_level1"
            android:onClick="level1_listener"/>
        <Button
            android:text="@string/level_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_level2"
            android:onClick="level2_listener"
            android:enabled="false"/>
        <Button
            android:text="@string/level_3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_level3"
            android:onClick="level3_listener"
            android:enabled="false"/>
        <Button
            android:text="@string/level_4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_level4"
            android:onClick="level4_listener"
            android:enabled="false"/>
    </LinearLayout>
</RelativeLayout>
